--- a/src/org/yawlfoundation/yawl/engine/defaultClients.properties
+++ b/src/org/yawlfoundation/yawl/engine/defaultClients.properties
@@ -18,6 +18,6 @@
 extClient:editor,yEditor,the editor logon
 extClient:monitorService,yMonitor,the monitor service
 extClient:documentStore,yDocStore,the document store service
-service:workletService,yWorklet,the worklet service,http://localhost:8080/workletService/ib,true
-service:wsInvokerService,yWSInvoker,web service invoker,http://localhost:8080/yawlWSInvoker,true
-service:mailService,yMail,mail service,http://localhost:8080/mailService/ib,true
+service:workletService,yWorklet,the worklet service,http://localhost:@TOMCAT_PORT@/workletService/ib,true
+service:wsInvokerService,yWSInvoker,web service invoker,http://localhost:@TOMCAT_PORT@/yawlWSInvoker,true
+service:mailService,yMail,mail service,http://localhost:@TOMCAT_PORT@/mailService/ib,true
