--- a/src/org/yawlfoundation/yawl/resourcing/datastore/orgdata/LDAPSource.properties
+++ b/src/org/yawlfoundation/yawl/resourcing/datastore/orgdata/LDAPSource.properties
@@ -75,6 +75,10 @@ firstname=givenName
 lastname=sn
 
 # These last two are optional - leave the right hand value blank if not required
+
+# Additional properties
+mail=mail
+
 #
 # The attribute name for the user's password. This attribute is required if user
 # authentication is to be handled directly by the Resource Service. It may be left
