--- a/src/org/yawlfoundation/yawl/resourcing/datastore/orgdata/LDAPSourceExtended.properties
+++ b/src/org/yawlfoundation/yawl/resourcing/datastore/orgdata/LDAPSourceExtended.properties
@@ -44,6 +44,9 @@ authentication=simple
 # semi-colons, e.g. "ou=yawlusers,ou=system;ou=yawlressources,ou=system".
 binding=ou=users,ou=system
 
+# Additional properties to get
+mail=mail
+
 ############################################################################
 
 
